# POLKAFORGE-GOA

./: .env.example  CNAME  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/explore/: page.tsx
cli/: index.js
components/: doc-viewer.tsx
components/layout/: header.tsx
components/sections/: features.tsx  hero.tsx
components/ui/: floating-dots.tsx
components/wallet/: wallet-connect.tsx
contracts/: Cargo.toml  polkaforge.rs
hooks/: use-polkadot-wallet.ts
lib/: gemini-ai.ts  ipfs.ts  polkadot-docs.ts  polkadot.ts  types.ts
