[package]
name = "polkaforge_contract"
version = "0.1.0"
authors = ["PolkaForge Team"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "polkaforge.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[[bin]]
name = "polkaforge_contract"
path = "polkaforge.rs"